<resources>
    <string name="app_name">MealDeal</string>
    <string name="save_menu">Save</string>
    <string name="title_activity_auth">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_out">Sign out</string>
    <string name="new_user_signup">New User Signup</string>
    <string name="okekechidalu17_gmail_com">okekechidalu17@gmail.com</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_nlogin_here">Already have an account. Login Here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account_n_register">Don\'t have an account   Register</string>
    <string name="insert_new_meal">Insert New Meal</string>
    <string name="monday_menu">Monday Menu</string>
    <string name="tuesday_menu">Tuesday Menu</string>
    <string name="wednesday_menu">Wednesday Menu</string>
    <string name="thursday_menu">Thursday Menu</string>
    <string name="admin">Admin</string>
    <string name="friday_menu">Friday Menu</string>

</resources>
