<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#008577"
    tools:context=".auth.ui.SignUpActivity"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">
    <RelativeLayout
        android:id="@+id/signupLayout"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/new_user_signup"
            android:textColor="#fff"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="70dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">


                <TextView
                    android:labelFor="@id/text_email"
                    android:text="@string/fui_email_hint"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/text_email_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/okekechidalu17_gmail_com"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_email" />

                <TextView
                    android:labelFor="@id/edit_text_password"
                    android:text="@string/prompt_password"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:drawablePadding="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/prompt_password"
                    android:id="@+id/edit_text_password_signup"
                    android:drawableLeft="@drawable/ic_lock"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"/>



                <Button
                    android:id="@+id/button_sign_up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="#d67601"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp"/>
                <!-- android:onClick=""-->


                <TextView
                    android:id="@+id/text_view_register"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textAlignment="center"
                    android:text="@string/already_have_an_account_nlogin_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/user_profile_image_backgroung"
            android:elevation="4dp"
            android:src="@drawable/download"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
