<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ui.AuthActivity">
    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="Account Login"
            android:textColor="#fff"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="70dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">


                <TextView
                    android:labelFor="@id/text_email"
                    android:text="email"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/text_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:inputType="textEmailAddress"/>

                <TextView
                    android:labelFor="@id/edit_text_password"
                    android:text="@string/prompt_password"
                      android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:drawablePadding="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:id="@+id/edit_text_password"
                    android:drawableLeft="@drawable/ic_lock"
                    android:inputType="textPassword"/>


                <TextView
                    android:id="@+id/text_view_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingTop="5dp"
                    android:text="@string/forgot_password"/>


                <Button
                    android:id="@+id/button_sign_in"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="#d67601"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/text_view_register"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp"
                    android:text="@string/don_t_have_an_account_n_register"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/user_profile_image_backgroung"
            android:elevation="4dp"
            android:src="@drawable/download"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>

